Bug 156752 - crash upon canceling changing of view properties
Summary: crash upon canceling changing of view properties
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 157357 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-01-27 00:32 UTC by Jonas P
Modified: 2008-02-12 20:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace of the crash (2.47 KB, text/plain)
2008-01-27 00:33 UTC, Jonas P
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonas P 2008-01-27 00:32:11 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Dolphin crashes reproducible when doing the following:

- Open View -> Adjust View Properties...
- Set View Mode: Details
- Apply View Properties To:
  Current folder including all sub folders
- Hit apply and yes to continue
- A dialog "Applying View Properties" pops up
- Cancel the dialog "View Properties" (main dialog)
- Cancel the dialog "Applying View Properties"
- Wait or click around for a few seconds
Comment 1 Jonas P 2008-01-27 00:33:10 UTC
Created attachment 23304 [details]
Backtrace of the crash
Comment 2 FiNeX 2008-01-27 14:39:34 UTC
What revision did you compile? I've tried on 764637 but dolphin didn't crash.
Comment 3 Jonas P 2008-01-27 17:30:58 UTC
For dolphin it is "Last Changed Rev: 767205"
Comment 4 Peter Penz 2008-01-27 18:01:30 UTC
I can confirm this issue with the latest version.
Comment 5 Peter Penz 2008-02-11 17:55:38 UTC
SVN commit 773706 by ppenz:

fixed crash when cancelling the "apply view properties" dialog

BUG: 156752

 M  +2 -0      viewpropsprogressinfo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=773706
Comment 6 Peter Penz 2008-02-12 20:37:03 UTC
*** Bug 157357 has been marked as a duplicate of this bug. ***