fixed crash when cancelling the "apply view properties" dialog

BUG: 156752

svn path=/trunk/KDE/kdebase/apps/; revision=773706