src/viewpropsprogressinfo.cpp
@@ -136,10 +136,12 @@ void ViewPropsProgressInfo::cancelApplying()
 {
     if (m_dirSizeJob != 0) {
         m_dirSizeJob->kill();
+        m_dirSizeJob = 0;
     }
 
     if (m_applyViewPropsJob != 0) {
         m_applyViewPropsJob->kill();
+        m_applyViewPropsJob = 0;
     }
 }
 
